@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-04-01 AP        Speed up of column property retrieval
     <li>2005-04-01 DP  1.2.2 Fix changing of view ownership
     <li>2005-03-28 AP        FK MATCH FULL
     <li>2005-03-28 AP        Option: User defined system schemas
